syntax = "proto3";

package fluence.kad;

message Node {
    bytes id = 1;
    bytes contact = 2;
}

message Nodes {
    repeated Node nodes = 1;
}

message Error {
    string message = 1;
}

message NodeResponse {
    oneof response {
        Node node = 1;
        Error error = 2;
    }
}

message NodesResponse {
    oneof response {
        Nodes nodes = 1;
        Error error = 2;
    }
}

message PingRequest {
}

message LookupRequest {
    bytes key = 1;
    int32 numberOfNodes = 2;
}

message LookupAwayRequest {
    bytes key = 1;
    bytes moveAwayFrom = 2;
    int32 numberOfNodes = 3;
}

service Kademlia {
    rpc ping (PingRequest) returns (NodeResponse);
    rpc lookup (LookupRequest) returns (NodesResponse);
    rpc lookupAway (LookupAwayRequest) returns (NodesResponse);
}